# scylla-cdc-rust

./: rust-toolchain
scylla-cdc/: Cargo.toml
scylla-cdc-printer/: Cargo.toml
scylla-cdc-replicator/: Cargo.toml
scylla-cdc-test-utils/: Cargo.toml
