[package]
name = "scylla-cdc-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.10"
scylla-cdc = { version = "0.1.0", path = "../scylla-cdc" }
tokio = { version = "1.1.0", features = ["full"] }
chrono = "0.4"
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.1", features = ["derive", "env"] }

[dev-dependencies]
scylla-cdc-test-utils = { path = "../scylla-cdc-test-utils" }
