[package]
name = "scylla-cdc-replicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.10"
scylla-cdc = { version = "0.1.0", path = "../scylla-cdc" }
tokio = { version = "1.1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
itertools = "0.12"
uuid = {version = "1", features = ["v1"]}
futures-util = "0.3"
tracing = "0.1"
chrono = "0.4"
clap = { version = "4.1", features = ["derive", "env"] }

[dev-dependencies]
scylla-cdc-test-utils = { path = "../scylla-cdc-test-utils" }
